[tool.poetry]
name = "ant-colony-opt"
version = "0.1.0"
description = ""
authors = ["Miguel Arquez"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.21.4"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
